<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">"FactoryTest"</string>
    <string name="btn_mic_test">"mic test"</string>
    <string name="btn_cam_test">"camera test"</string>
    <string name="btn_spk_test">"speaker test"</string>
    <string name="btn_hp_test">"earphone test"</string>
    <string name="btn_bkl_test">"backlight test"</string>
    <string name="btn_led_test">"led test"</string>
    <string name="btn_save_gps">"save gps data"</string>
    <string name="btn_save_report">"save report"</string>
    <string name="btn_exit">"exit"</string>
    <string name="txt_key_test">"button test:"</string>
    <string name="txt_key_home">"HOME"</string>
    <string name="txt_key_power">"POWER"</string>
    <string name="txt_key_voldec">"VOL-"</string>
    <string name="txt_key_volinc">"VOL+"</string>
    <string name="txt_mic_test">"mic test:"</string>
    <string name="txt_gps_test">"GPS test"</string>
    <string name="txt_wifi_test">"WiFI"</string>
    <string name="txt_bt_test">"BT"</string>

    <string name="device_test">"Device test"</string>
    <string name="extsd_test">"extsd  :"</string>
    <string name="usbotg_test">"usbotg :"</string>
    <string name="uhost_test">"uhost  :"</string>
    <string name="ephdet_test">"hpdet  :"</string>
    <string name="gsensor_test">"gsensor:"</string>
    <string name="battery_test">"battery:"</string>
    <string name="uuid_test">"uuid   :"</string>
    <string name="ddr_test">"ddr    :"</string>
    <string name="flash_test">"flash  :"</string>
    <string name="wifimac_test">"wifimac:"</string>
    <string name="btmac_test">"btmac  :"</string>

    <string name="test_pass">"pass"</string>
    <string name="extsd_insert">"please insert sdcard"</string>
    <string name="extsd_eject">"please eject sdcard"</string>
    <string name="otg_insert">"please insert usb cable"</string>
    <string name="otg_eject">"please eject usb cable"</string>
    <string name="uhost_insert">"insert udisk or mouse"</string>
    <string name="uhost_eject">"eject udisk or mouse"</string>
    <string name="eph_insert">"please insert earphone"</string>
    <string name="eph_eject">"please eject earphone"</string>

    <string name="test_standard">"Test standard (gps simulator)"</string>
    <string name="standard1">"gps : two 45dB，one 43dB"</string>
    <string name="standard2">"wifi: signal level >= "</string>
    <string name="standard3">"bt  : signal level >= "</string>
    <string name="version">"factorytest for a33-213 v1.0.7"</string>

    <string name="mic_test_title">"please check mic, record then playback, then make judgement."</string>
    <string name="cam_test_title">"please check camera, including front, rear and backup camera."</string>
    <string name="spk_test_title">"please check speaker sound"</string>
    <string name="eph_test_title">"please check earphone sound (L/R channel)"</string>
    <string name="bkl_test_title">"please check lcd backlight brightness"</string>
    <string name="bkl_test_max">"set to max"</string>
    <string name="bkl_test_min">"set to min"</string>
    <string name="led_test_title">"please check the charge led color"</string>
    <string name="led_test_red">"red"</string>
    <string name="led_test_green">"green"</string>
    <string name="led_test_orange">"orange"</string>

    <string name="save_gps_done">"save gps data successed !"</string>
    <string name="save_report_done">"save test report successed !"</string>

    <string name="radio_pass">"pass"</string>
    <string name="radio_ng">"ng"</string>

    <string name="record_audio">"start recording"</string>
    <string name="playback_audio">"playback recording"</string>
    <string name="camera_front">"front camera"</string>
    <string name="camera_back">"back camera"</string>
    <string name="camera_avin">"avin camera"</string>

    <string name="txt_fm_test">"fm test"</string>
    <string name="btn_fm_88mhz">"88Mhz"</string>
    <string name="btn_fm_90mhz">"90Mhz"</string>
    <string name="btn_fm_92mhz">"92Mhz"</string>
    <string name="btn_fm_off">"off"</string>

</resources>

