<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:paddingRight="25dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <RadioButton
            android:id="@+id/radio_record"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginLeft="10dp"
            android:text="@string/record_audio"
            android:textSize="36dp" />
        <RadioButton
            android:id="@+id/radio_playback"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginLeft="10dp"
            android:text="@string/playback_audio"
            android:textSize="36dp" />
        <RadioButton
            android:id="@+id/radio_ng"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginLeft="10dp"
            android:text="@string/radio_ng"
            android:textColor="#ff0000"
            android:textSize="36dp" />
        <RadioButton
            android:id="@+id/radio_pass"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginLeft="10dp"
            android:text="@string/radio_pass"
            android:textColor="#00ff00"
            android:textSize="36dp" />
    </RadioGroup>
</LinearLayout>
