<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical" >
            <com.apical.factorytest.GpsView
                android:id="@+id/gps_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="#33ff0000" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal" >
                <com.apical.factorytest.WifiView
                    android:id="@+id/wifi_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="#33ff0000" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="16"
                android:orientation="horizontal" >
                <LinearLayout
                    android:id="@+id/fm_test"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:textColor="#ffff00"
                        android:textSize="@dimen/txt_text_size"
                        android:text="@string/txt_fm_test" />
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <RadioButton
                            android:id="@+id/btn_fm_88mhz"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:textSize="@dimen/txt_text_size"
                            android:text="@string/btn_fm_88mhz" />
                        <RadioButton
                            android:id="@+id/btn_fm_90mhz"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:textSize="@dimen/txt_text_size"
                            android:text="@string/btn_fm_90mhz" />
                        <RadioButton
                            android:id="@+id/btn_fm_92mhz"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:textSize="@dimen/txt_text_size"
                            android:text="@string/btn_fm_92mhz" />
                        <RadioButton
                            android:id="@+id/btn_fm_off"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:textSize="@dimen/txt_text_size"
                            android:text="@string/btn_fm_off" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical" >
            <com.apical.factorytest.DeviceView
                android:id="@+id/device_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="#33ff0000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="37"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_mic_test"
            android:layout_width="180dp"
            android:layout_height="78dp"
            android:text="@string/btn_mic_test"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/btn_spk_test"
            android:layout_width="180dp"
            android:layout_height="78dp"
            android:text="@string/btn_spk_test"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/btn_hp_test"
            android:layout_width="180dp"
            android:layout_height="78dp"
            android:text="@string/btn_hp_test"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/btn_bkl_test"
            android:layout_width="180dp"
            android:layout_height="78dp"
            android:text="@string/btn_bkl_test"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/btn_save_gps"
            android:layout_width="180dp"
            android:layout_height="78dp"
            android:text="@string/btn_save_gps"
            android:textSize="@dimen/btn_text_size"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_save_report"
            android:layout_width="180dp"
            android:layout_height="78dp"
            android:text="@string/btn_save_report"
            android:textSize="@dimen/btn_text_size"
            android:enabled="false" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="180dp"
            android:layout_height="78dp"
            android:text="@string/btn_exit"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>
</LinearLayout>
